--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <script type="text/javascript">
 <!--
 if (screen.width <= 699) {
-document.location = "mobile.html";
+document.location = "/mobile";
 }
+  else {
+    document.location = "/desktop";
+  }
 //-->
 </script>
