--- a/desktop/index.html
+++ b/desktop/index.html
@@ -4,7 +4,7 @@
   
 </head>
 
-<body style="background-color:#f44336;">
+<body style="background-color:#f44336;margin: 0;padding: 0;">
 
 
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
