--- a/desktop/index.html
+++ b/desktop/index.html
@@ -1,11 +1,37 @@
 <head>
   <title>RetryLife</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+  <style>
+  	body {
+		font-family: Roboto;
+		margin: 0;
+		padding: 0;
+	}
+  </style>
   
 </head>
 
-<body style="background-color:#f44336;margin: 0;padding: 0;">
-  <h1 style="float:left;margin-left:20%;">RetryLife</h1>
+<body>
+	<div style="float:left;width: 38%;height:100%;">
+		<div style="height:30%"></div>
+  <h1 style="float:left;margin-left:26%;font-size:80px;">RetryLife</h1>
+  <div style="height:20%"></div>
+  <div class="btn-group btn-group-lg" role="group" aria-label="..." style="float:left;margin-left:25%;font-size:80px;">
+  	<a target="main" href="../music"><button type="button" class="btn btn-info">Music</button></a>
+  	<div style="width:10%;color:white;">-</div>
+  	<a target="main" href="../youtube.html"><button type="button" class="btn btn-primary">Youtube</button></a>
+  	<div style="width:10%;color:white;">-</div>
+  	<a href="https://www.patreon.com/Retrylife"><button type="button" class="btn btn-info">Support Us</button></a>
+  </div>
+</div>
+<div style="float:right;width: 62%;height:100%;padding:4%;">
+	<iframe name="main" frameBorder="0" style="margin-left:21%;height:100%;width:75%;"></iframe>
+	</div>
+	
+
+
+
 
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
