--- a/youtube.html
+++ b/youtube.html
@@ -12,29 +12,31 @@
 <body>
 	<div style="float:left;margin-left:20%;text-align:center;">
 		<div style="height:15%;"></div>
-		
+		<a href="https://www.youtube.com/channel/UCrHT3Lt0Mg90bspbMHJfTcA">
 <div class="card" style="width: 20rem;">
   <div class="card-block">
     <h4 class="card-title">RetryLife Official</h4>
   </div>
 </div>
-
+</a>
 <div style="height:10%;"></div>
-
+<a href="https://www.youtube.com/channel/UCxzARKt0_U0sLHbF4pDN1Pw">
 <div class="card" style="width: 20rem;">
   <div class="card-block">
     <h4 class="card-title">Nathan Desjardins</h4>
   </div>
 </div>
-
+</a>
 <div style="height:10%;"></div>
-
+<a href="https://www.youtube.com/channel/UCyo9qpIPXbLn69_kfA7Vv8Q">
 <div class="card" style="width: 20rem;">
   <div class="card-block">
     <h4 class="card-title">Russme Music</h4>
   </div>
 </div>
+</a>
 </div>
+
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
