--- a/mobile/index.html
+++ b/mobile/index.html
@@ -13,18 +13,19 @@
 </head>
 
 <body>
-	<div style="width:100%;height:15%;background-color:#f44335;">
+	<div style="width:100%;height:15%;">
 		<div style="height:30%"></div>
-  <h1 style="float:left;margin-left:23%;font-size:130px;">RetryLife</h1>
+  <h1 style="float:left;margin-left:24%;font-size:130px;">RetryLife</h1>
   </div>
   
   <div style="height:20%;width:100%;">
-  <div class="btn-group btn-group-lg" role="group" aria-label="..." style="float:left;margin-left:40%;font-size:80px;">
-  	<a target="main" href="../music"><button type="button" class="btn btn-info">Music</button></a>
+  <div class="btn-group btn-group-lg" role="group" aria-label="..." style="float:left;margin-left:8%;font-size:130px;">
+  	
+  	<a target="main" href="../music"><button type="button" class="btn btn-info" style="font-size:60px">Music</button></a>
   	<div style="width:10%;color:white;">-</div>
-  	<a target="main" href="../youtube.html"><button type="button" class="btn btn-primary">Youtube</button></a>
+  	<a target="main" href="../youtube.html"><button type="button" class="btn btn-primary" style="font-size:60px">Youtube</button></a>
   	<div style="width:10%;color:white;">-</div>
-  	<a href="https://www.patreon.com/Retrylife"><button type="button" class="btn btn-info">Support Us</button></a>
+  	<a href="https://www.patreon.com/Retrylife"><button type="button" class="btn btn-info" style="font-size:60px">Support Us</button></a>
   </div>
 </div>
 
