--- a/youtube.html
+++ b/youtube.html
@@ -10,31 +10,37 @@
   </style>
 </head>
 <body>
-	<div style="float:left;margin-left:20%;text-align:center;">
+	<div style="float:left;margin-left:20%;text-align:center;width:80%;height:100%;">
 		<div style="height:15%;"></div>
+		
 		<a href="https://www.youtube.com/channel/UCrHT3Lt0Mg90bspbMHJfTcA">
-<div class="card" style="width: 20rem;">
+<div class="card" style="width: 100%;">
   <div class="card-block">
     <h4 class="card-title">RetryLife Official</h4>
   </div>
 </div>
 </a>
+
 <div style="height:10%;"></div>
+
 <a href="https://www.youtube.com/channel/UCxzARKt0_U0sLHbF4pDN1Pw">
-<div class="card" style="width: 20rem;">
+<div class="card" style="width: 100%;">
   <div class="card-block">
     <h4 class="card-title">Nathan Desjardins</h4>
   </div>
 </div>
 </a>
+
 <div style="height:10%;"></div>
+
 <a href="https://www.youtube.com/channel/UCyo9qpIPXbLn69_kfA7Vv8Q">
-<div class="card" style="width: 20rem;">
+<div class="card" style="width: 100%;">
   <div class="card-block">
     <h4 class="card-title">Russme Music</h4>
   </div>
 </div>
 </a>
+
 </div>
 
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
