--- a/mobile/index.html
+++ b/mobile/index.html
@@ -18,7 +18,7 @@
   <h1 style="float:left;margin-left:24%;font-size:130px;">RetryLife</h1>
   </div>
   
-  <div style="height:20%;width:100%;">
+  <div style="height:10%;width:100%;">
   <div class="btn-group btn-group-lg" role="group" aria-label="..." style="float:left;margin-left:8%;font-size:130px;">
   	
   	<a target="main" href="../music"><button type="button" class="btn btn-info" style="font-size:60px">Music</button></a>
@@ -31,7 +31,7 @@
 
 
 <div style="width:100%;height:60%;padding:4%;">
-	<iframe name="main" frameBorder="0" style="height:100%;width:100%;"></iframe>
+	<iframe name="main" frameBorder="0" style="height:100%;width:100%;float:left;margin-left:10%"></iframe>
 	</div>
 	
 
