--- a/desktop/index.html
+++ b/desktop/index.html
@@ -18,15 +18,15 @@
   <h1 style="float:left;margin-left:26%;font-size:80px;">RetryLife</h1>
   <div style="height:20%"></div>
   <div class="btn-group btn-group-lg" role="group" aria-label="..." style="float:left;margin-left:25%;font-size:80px;">
-  	<a target="main" href="../music"><button type="button" class="btn btn-info">Music</button></a>
+  	<a target="main" href="../music/index.html"><button type="button" class="btn btn-info">Music</button></a>
   	<div style="width:10%;color:white;">-</div>
   	<a target="main" href="../youtube.html"><button type="button" class="btn btn-primary">Youtube</button></a>
   	<div style="width:10%;color:white;">-</div>
-  	<a href="https://www.patreon.com/Retrylife"><button type="button" class="btn btn-info">Support Us</button></a>
+  	<a href="https://www.patreon.com/bePatron?u=7175648"><button type="button" class="btn btn-info">Support Us</button></a>
   </div>
 </div>
 <div style="float:right;width: 62%;height:100%;padding:4%;">
-	<iframe name="main" frameBorder="0" style="margin-left:21%;height:100%;width:75%;"></iframe>
+	<iframe name="main" frameBorder="0" style="margin-left:21%;height:100%;width:75%;" src="../about.html"></iframe>
 	</div>
 	
 
