--- a/mobile/index.html
+++ b/mobile/index.html
@@ -21,17 +21,17 @@
   <div style="height:10%;width:100%;">
   <div class="btn-group btn-group-lg" role="group" aria-label="..." style="float:left;margin-left:8%;font-size:130px;">
   	
-  	<a target="main" href="../music"><button type="button" class="btn btn-info" style="font-size:60px">Music</button></a>
+  	<a target="main" href="../music/index.html"><button type="button" class="btn btn-info" style="font-size:60px">Music</button></a>
   	<div style="width:10%;color:white;">-</div>
   	<a target="main" href="../youtube.html"><button type="button" class="btn btn-primary" style="font-size:60px">Youtube</button></a>
   	<div style="width:10%;color:white;">-</div>
-  	<a href="https://www.patreon.com/Retrylife"><button type="button" class="btn btn-info" style="font-size:60px">Support Us</button></a>
+  	<a href="https://www.patreon.com/bePatron?u=7175648"><button type="button" class="btn btn-info" style="font-size:60px">Support Us</button></a>
   </div>
 </div>
 
 
 <div style="width:95%;height:60%;padding:4%;">
-	<iframe name="main" frameBorder="0" style="height:100%;width:100%;float:left;margin-left:10%"></iframe>
+	<iframe name="main" frameBorder="0" style="height:100%;width:100%;float:left;margin-left:10%" src="../about.html"></iframe>
 	</div>
 	
 
