--- a/desktop/index.html
+++ b/desktop/index.html
@@ -2,6 +2,7 @@
   <title>RetryLife</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+	<link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
   <style>
   	body {
 		font-family: Roboto;
