--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
   <div class="card-block">
 	<h2>Featured</h2>
 	
-	<iframe style="border: 0; width: 400px; height: 472px;" src="https://bandcamp.com/EmbeddedPlayer/album=3082028873/size=large/bgcol=ffffff/linkcol=0687f5/artwork=small/transparent=true/" seamless><a href="http://retrylife.bandcamp.com/album/sir-dankleys-mlg-restaurant">Sir Dankley&#39;s MLG Restaurant by RetryLife</a></iframe>
+	<iframe style="border: 0; width: 99%; height: 85%;" src="https://bandcamp.com/EmbeddedPlayer/album=3082028873/size=large/bgcol=ffffff/linkcol=0687f5/artwork=small/transparent=true/" seamless><a href="http://retrylife.bandcamp.com/album/sir-dankleys-mlg-restaurant">Sir Dankley&#39;s MLG Restaurant by RetryLife</a></iframe>
 		</div>
 	</div>
 </div>
