--- a/mobile/index.html
+++ b/mobile/index.html
@@ -2,7 +2,7 @@
   <title>RetryLife</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
-	<link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
   <style>
   	body {
 		font-family: Roboto;
@@ -22,7 +22,7 @@
   <div style="height:10%;width:100%;">
   <div class="btn-group btn-group-lg" role="group" aria-label="..." style="float:left;margin-left:8%;font-size:130px;">
   	
-  	<a target="main" href="../music/index.html"><button type="button" class="btn btn-info" style="font-size:60px">Music</button></a>
+  	<a target="main" href="../music/index-mobile.html"><button type="button" class="btn btn-info" style="font-size:60px">Music</button></a>
   	<div style="width:10%;color:white;">-</div>
   	<a target="main" href="../youtube.html"><button type="button" class="btn btn-primary" style="font-size:60px">Youtube</button></a>
   	<div style="width:10%;color:white;">-</div>
@@ -31,8 +31,8 @@
 </div>
 
 
-<div style="width:95%;height:60%;padding:4%;">
-	<iframe name="main" frameBorder="0" style="height:100%;width:100%;float:left;margin-left:10%" src="../about.html"></iframe>
+<div style="width:100%;height:73.8%;padding:0;margin:0;">
+	<iframe name="main" frameBorder="0" style="height:100%;width:100%;" src="../about-mobile.html"></iframe>
 	</div>
 	
 
