--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <script type="text/javascript">
+  <div id = "myDiv"><img id = "myImage" src = "img/load.gif" style="width:100%;"></div><br>
 <!--
+  setTimeout (function(){
+  document.getElementById("myDiv").style.display="none";
+  }, 6000);
+  
 if (screen.width <= 699) {
 document.location = "/mobile";
 }
