--- a/index.html
+++ b/index.html
@@ -1,16 +1,10 @@
-
-  <div id = "myDiv"><img id = "myImage" src = "img/load.gif" style="width:100%;"></div><br>
 <script type="text/javascript">
 <!--
-  setTimeout (function(){
-  document.getElementById("myDiv").style.display="none";
-  }, 6000);
-  
 if (screen.width <= 699) {
-document.location = "/mobile";
+document.location = "/mobile/load.html";
 }
   else {
-    document.location = "/desktop";
+    document.location = "/desktop/load.html";
   }
 //-->
 </script>
