--- a/desktop/load.html
+++ b/desktop/load.html
@@ -4,4 +4,5 @@
 setTimeout(function(){
    document.getElementById("myDiv").style.display="none";
 }, 6000);
+   document.location = "./index.html";
 </script>
