--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
 <!--
 if (screen.width <= 699) {
-document.location = "/mobile/load.html";
+document.location = "/mobile/";
 }
   else {
     document.location = "/desktop/load.html";
