--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ if (screen.width <= 699) {
 document.location = "/mobile/";
 }
   else {
-    document.location = "/desktop/load.html";
+    document.location = "/desktop/";
   }
 //-->
 </script>
