--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
 <!--
 if (screen.width <= 699) {
-document.location = "/mobile/";
+document.location = "https://ewpratten.github.io/retrylife-social/";
 }
   else {
     document.location = "/desktop/";
