--- a/desktop/index.html
+++ b/desktop/index.html
@@ -2,35 +2,48 @@
   <title>RetryLife</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
-	<link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
   <style>
   	body {
 		font-family: Roboto;
 		margin: 0;
 		padding: 0;
+		background-image: url("../img/background.png");
+		background-size: 100% 100%;
+		
 	}
-  </style>
+		</style>
   
 </head>
 
-<body>
+<body >
+	<div class="content">
 	<div style="float:left;width: 38%;height:100%;">
 		<div style="height:30%"></div>
   <h1 style="float:left;margin-left:26%;font-size:80px;">RetryLife</h1>
   <div style="height:20%"></div>
+  
+
+
   <div class="btn-group btn-group-lg" role="group" aria-label="..." style="float:left;margin-left:25%;font-size:80px;">
+  
   	<a target="main" href="../music/index.html"><button type="button" class="btn btn-info">Music</button></a>
-  	<div style="width:10%;color:white;">-</div>
+  	<div style="width:10%;color:rgba(255, 255, 255, 0)">-</div>
   	<a target="main" href="../youtube.html"><button type="button" class="btn btn-primary">Youtube</button></a>
-  	<div style="width:10%;color:white;">-</div>
+  	<div style="width:10%;color:rgba(255, 255, 255, 0);">-</div>
   	<a href="https://www.patreon.com/bePatron?u=7175648"><button type="button" class="btn btn-info">Support Us</button></a>
   </div>
 </div>
+
+
+
+
 <div style="float:right;width: 62%;height:100%;padding:4%;">
-	<iframe name="main" frameBorder="0" style="margin-left:21%;height:100%;width:75%;" src="../about.html"></iframe>
+	<iframe name="main" frameBorder="0" style="margin-left:21%;height:100%;width:75%;" src="../about.html" allowtransparency="true"></iframe>
 	</div>
 	
-
+	
+</div>
 
 
 
