--- a/desktop/index.html
+++ b/desktop/index.html
@@ -8,7 +8,7 @@
 		font-family: Roboto;
 		margin: 0;
 		padding: 0;
-		background-image: url("../img/background.png");
+		background-image: url("../img/Background.png");
 		background-size: 100% 100%;
 		
 	}
