--- a/youtube.html
+++ b/youtube.html
@@ -6,6 +6,7 @@
 		font-family: Roboto;
 		margin: 0;
 		padding: 0;
+		background:none transparent;
 	}
   </style>
 </head>
@@ -31,15 +32,7 @@
 </div>
 </a>
 
-<div style="height:10%;"></div>
 
-<a href="https://www.youtube.com/channel/UCyo9qpIPXbLn69_kfA7Vv8Q">
-<div class="card" style="width: 100%;">
-  <div class="card-block">
-    <h4 class="card-title">Russme Music</h4>
-  </div>
-</div>
-</a>
 
 </div>
 
