--- a/about.html
+++ b/about.html
@@ -6,49 +6,66 @@
 		font-family: Roboto;
 		margin: 0;
 		padding: 0;
+		background:none transparent;
 	}
   </style>
   
 </head>
 <body>
+	<div style="height:100%">
 	
-	<div style="height:97%;width:100%;">
+	<div class="yt" style="width:87%;height:45%;">
+	<div class="card" style="">
+	<div class="card-block">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
-<div class="featured" style="float:left;height:100%;width:60%;">
-	<div class="card" style="width: 98%;margin:0;">
-  <div class="card-block">
-	<h2>Featured</h2>
+<iframe id="youtube_video" width="100%" height="100%" frameborder="0" allowfullscreen></iframe>
+
+<script>
+var channelID = "UCrHT3Lt0Mg90bspbMHJfTcA";
+$.getJSON('https://api.rss2json.com/v1/api.json?rss_url=https%3A%2F%2Fwww.youtube.com%2Ffeeds%2Fvideos.xml%3Fchannel_id%3D'+channelID, function(data) {
+   var link = data.items[0].link;
+   var id = link.substr(link.indexOf("=")+1);
+    $("#youtube_video").attr("src","https://youtube.com/embed/"+id + "?controls=0&showinfo=0&rel=0");
+});
+</script>
 	
-	<iframe style="border: 0; width: 99%; height: 85%;" src="./content/featured.html" seamless><a href="http://retrylife.bandcamp.com/album/sir-dankleys-mlg-restaurant">Sir Dankley&#39;s MLG Restaurant by RetryLife</a></iframe>
-	</div>
 	</div>
 </div>
+</div>
+	
+	
+	
+	<div style="height:3.2rem;"></div>
+	
+	
+
+	
+
+	
 
 
-<div class="about" style="float:right; width:40%;height:100%;">
-	<div class="card" style="width: 13rem;">
+
+<div class="about" style=" width:87%;height:20%">
+	<div class="card" >
   <div class="card-block">
 	<h4 class="card-title">About Us</h4>
 	<p class="card-text">We are a group of young content creators who have joined together to create cool stuff for you guys to enjoy!</p>
-	</div>
-	</div>
-	
-	<div style="height:0.5rem;"></div>
-	<div class="card" style="width: 13rem;">
-	<div class="card-block">
 	<a href="people.html" class="btn btn-primary" style="width:10.2rem;">What we do</a>
-	
-	
 	</div>
 	</div>
 	
+	</div>
 	
+
 
 	
 	
-</div>
+		
+	
+	</div>
 
-</div>
+
 
 
 
