--- a/people.html
+++ b/people.html
@@ -6,6 +6,7 @@
 		font-family: Roboto;
 		margin: 0;
 		padding: 0;
+		background:none transparent;
 	}
   </style>
   
@@ -13,7 +14,7 @@
 <body>
 
 
-<div class="card" style="width:80%;">
+<div style="width:80%;">
   <div class="card-block">
   	
   	<table>
