--- a/youtube.html
+++ b/youtube.html
@@ -8,30 +8,45 @@
 		padding: 0;
 		background:none transparent;
 	}
+	/*
+	img {
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+}
+*/
   </style>
 </head>
 <body>
-	<div style="float:left;margin-left:0%;text-align:center;width:80%;height:100%;">
+	
+	<div style="float:left;margin-left:0%;text-align:center;height:100%;">
 		<div style="height:15%;"></div>
-		
+		<table>
+			<tr>
+				<th>
 		<a href="https://www.youtube.com/channel/UCrHT3Lt0Mg90bspbMHJfTcA">
-<div class="card" style="width: 100%;">
+<div class="card" style="">
+	<img class="card-img-top" src="https://yt3.ggpht.com/-TMpNTPzQYYI/AAAAAAAAAAI/AAAAAAAAAAA/-7aRKZq4ero/s88-c-k-no-mo-rj-c0xffffff/photo.jpg" style="height:30%;width:100%;" alt="Card image cap">
   <div class="card-block">
     <h4 class="card-title">RetryLife Official</h4>
   </div>
 </div>
 </a>
+</th>
+<th>
 
-<div style="height:10%;"></div>
 
 <a href="https://www.youtube.com/channel/UCxzARKt0_U0sLHbF4pDN1Pw">
 <div class="card" style="width: 100%;">
+<img class="card-img-top" src="https://yt3.ggpht.com/-3SZJHOdQ5lo/AAAAAAAAAAI/AAAAAAAAAAA/pVvu_8JOU-8/s88-c-k-no-mo-rj-c0xffffff/photo.jpg" style="height:30%;width:100%;" alt="Card image cap">
   <div class="card-block">
     <h4 class="card-title">Nathan Desjardins</h4>
   </div>
 </div>
 </a>
-
+</th>
+</tr>
+</table>
 
 
 </div>
