--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 </style><link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700"><style type="text/css">.gm-style .gm-style-cc span,.gm-style .gm-style-cc a,.gm-style .gm-style-mtc div{font-size:10px}
 </style><style type="text/css">@media print {  .gm-style .gmnoprint, .gmnoprint {    display:none  }}@media screen {  .gm-style .gmnoscreen, .gmnoscreen {    display:none  }}</style><style type="text/css">.gm-style-pbc{transition:opacity ease-in-out;background-color:rgba(0,0,0,0.45);text-align:center}.gm-style-pbt{font-size:22px;color:white;font-family:Roboto,Arial,sans-serif;position:relative;margin:0;top:50%;-webkit-transform:translateY(-50%);-ms-transform:translateY(-50%);transform:translateY(-50%)}
 </style>
-<script type="text/javascript" id="www-widgetapi-script" src="https://s.ytimg.com/yts/jsbin/www-widgetapi-vflv4EGJj/www-widgetapi.js" async=""></script><script type="text/javascript" id="www-widgetapi-script" src="https://s.ytimg.com/yts/jsbin/www-widgetapi-vflv4EGJj/www-widgetapi.js" async=""></script><script type="text/javascript" id="www-widgetapi-script" src="https://s.ytimg.com/yts/jsbin/www-widgetapi-vflv4EGJj/www-widgetapi.js" async=""></script><script type="text/javascript" id="www-widgetapi-script" src="https://s.ytimg.com/yts/jsbin/www-widgetapi-vflv4EGJj/www-widgetapi.js" async=""></script>
+<script type="text/javascript" id="www-widgetapi-script" src="https://s.ytimg.com/yts/jsbin/www-widgetapi-vflxHXqxJ/www-widgetapi.js" async=""></script><script type="text/javascript" id="www-widgetapi-script" src="https://s.ytimg.com/yts/jsbin/www-widgetapi-vflv4EGJj/www-widgetapi.js" async=""></script><script type="text/javascript" id="www-widgetapi-script" src="https://s.ytimg.com/yts/jsbin/www-widgetapi-vflv4EGJj/www-widgetapi.js" async=""></script><script type="text/javascript" id="www-widgetapi-script" src="https://s.ytimg.com/yts/jsbin/www-widgetapi-vflv4EGJj/www-widgetapi.js" async=""></script><script type="text/javascript" id="www-widgetapi-script" src="https://s.ytimg.com/yts/jsbin/www-widgetapi-vflv4EGJj/www-widgetapi.js" async=""></script>
 <script type="text/javascript" id="www-widgetapi-script" src="https://s.ytimg.com/yts/jsbin/www-widgetapi-vflv4EGJj/www-widgetapi.js" async=""></script><script type="text/javascript" id="www-widgetapi-script" src="https://s.ytimg.com/yts/jsbin/www-widgetapi-vflv4EGJj/www-widgetapi.js" async=""></script><script src="https://www.youtube.com/iframe_api?v=2.9.3" id="YTAPI"></script>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -177,7 +177,7 @@
 
               <!-- Item 3 -->
               <div class="col-md-3 mb-sm-100 count-item wow fadeIn" data-wow-duration="1s" style="visibility: visible; animation-duration: 1s; animation-name: fadeIn;">
-                <span id="count-3" class="count-nbr">4</span>
+                <span id="count-3" class="count-nbr">6</span>
                 <span class="count-text">members</span>
               </div>
 
@@ -197,7 +197,7 @@
           <div class="row">
             
             <!-- Item 1 -->
-            <div class="ft-item ft-1 col-md-6" style="background-image:url(">
+            <div class="ft-item ft-1 col-md-6" style="background-image: url('/img/rtl.png')">
               <div class="bg-overlay">
 
                 <div class="content-wrapper">
@@ -210,7 +210,7 @@
             </div><!-- / .ft-item -->
 
             <!-- Item 2 -->
-            <div class="ft-item ft-2 col-md-6" style="background-image:url('');background-color:">
+            <div class="ft-item ft-2 col-md-6" style="background-image:url('/img/nds.png');background-color:">
               <div class="bg-overlay">
 
                 <div class="content-wrapper">
