--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<style>
 		@font-face{
     font-family: "8-bit";
-    src: url('font.ttf'),
-    url('font.eot'); /* IE */
+    src: url('./font.ttf'),
+    url('./font.eot'); /* IE */
 }
 body {
 	font-family: "8-bit";
