--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@ body {
 	<a href="https://www.youtube.com/channel/UCrHT3Lt0Mg90bspbMHJfTcA"><h2>Video</h2></a>
 	<a href="./donate.html"><h2>Donate</h2></a>
 	<a href="https://github.com/Ewpratten"><h2>Github</h2></a>
+	<a href="https://www.twitrss.me/twitter_user_to_rss/?user=ewpratten"><h2>RSS</h2></a>
+		<a href="./about.html"><h2>About Me</h2></a>
 	</span></div>
 	<div><span></span></div>
 </div>
