--- a/error.html
+++ b/error.html
@@ -21,7 +21,7 @@ body {
 		<br>
 		<br>
 	<h1>An Error Occurred</h1>
-  <p>Try checking the spelling of the link you followed. Or <a href="./index.html>Go Back</a></p>
+  <p>Try checking the spelling of the link you followed. Or <a href="./index.html">Go Back</a></p>
   </span></div>
 	<div><span></span></div>
 </div>
