--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ body {
 	<a href="https://www.youtube.com/channel/UCrHT3Lt0Mg90bspbMHJfTcA"><h2>Video</h2></a>
 	<a href="./donate.html"><h2>Donate</h2></a>
 	<a href="https://github.com/Ewpratten"><h2>Github</h2></a>
+	<a href="https://keybase.io/ewpratten"><h2>Keybase</h2></a>
 	<a href="http://www.rssmix.com/u/8265803/rss.xml"><h2>RSS</h2></a>
 		<a href="./about.html"><h2>About Me</h2></a>
     
