--- a/button/index.html
+++ b/button/index.html
@@ -4,8 +4,8 @@
 	<style>
 		@font-face{
     font-family: "8-bit";
-    src: url('./font.txt'),
-    url('./font.txt'); /* IE */
+    src: url('../font.txt'),
+    url('../font.txt'); /* IE */
 }
 body {
 	font-family: "8-bit";
