--- a/button/index.html
+++ b/button/index.html
@@ -22,8 +22,7 @@ body {
 	<h3>It's a button, click it</h3>
 
 
-<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-text="I pressed the button!" data-url="http://www.retrylife.ca/button" data-hashtags="RTLButton" data-related="ewpratten" data-show-count="false"><button>Button</button></a><script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script><script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    
+<a href="https://twitter.com/intent/tweet?hashtags=RTLButton&ref_src=twsrc%5Etfw&related=ewpratten&text=I%20pressed%20the%20button!&tw_p=tweetbutton&url=http%3A%2F%2Fwww.retrylife.ca%2Fbutton"><button>Button</button></a>
 	
 	
 	
