--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ body {
     <p id="demo">21d 12h 19m 33s </p>
 	<a href="Http://retrylife.bandcamp.com"><h2>Music</h2></a>
 	<a href="https://www.youtube.com/channel/UCrHT3Lt0Mg90bspbMHJfTcA"><h2>Video</h2></a>
+	<a href="https://devcredits.herokuapp.com/"><h2>devCredits</h2></a>
 	<a href="http://www.retrylife.ca/button/"><h2>The Button</h2></a>
 	<a href="https://github.com/Ewpratten"><h2>Github</h2></a>
 	<a href="https://keybase.io/ewpratten"><h2>Keybase</h2></a>
