--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@ body {
 	<h1>RetryLife</h1>
     <p id="demo">21d 12h 19m 33s </p>
 	<a href="Http://retrylife.bandcamp.com"><h2>Music</h2></a>
-	<a href="https://www.youtube.com/channel/UCrHT3Lt0Mg90bspbMHJfTcA"><h2>Video</h2></a>
+	<a href="https://www.youtube.com/channel/UCrHT3Lt0Mg90bspbMHJfTcA"><h2>YouTube</h2></a>
+	<a href="https://twitch.tv/retrylife/"><h2>Twitch</h2></a>
+	<a href="https://ewpratten.deviantart.com/"><h2>DeviantArt</h2></a>
 	<a href="https://devcredits.herokuapp.com/"><h2>devCredits</h2></a>
 	<a href="http://www.retrylife.ca/button/"><h2>The Button</h2></a>
 	<a href="https://github.com/Ewpratten"><h2>Github</h2></a>
 	<a href="https://keybase.io/ewpratten"><h2>Keybase</h2></a>
-	<a href="http://www.rssmix.com/u/8265803/rss.xml"><h2>RSS</h2></a>
-		<a href="./about.html"><h2>About Me</h2></a>
+	
     
 
 <script>
