--- a/music.html
+++ b/music.html
@@ -12,15 +12,25 @@ h3 {
     vertical-align: middle;
     float: none;
 }
+a.btnn {
+  color:white;
+}
+.embed {
+  align:center;
+}
+.btnn {
+  align-self:center;
+}
 </style>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <ul class="nav justify-content-center">
   <li class="nav-item">
-    <a class="nav-link active" href="./index.html">Home</a>
+    <a class="nav-link" href="./index.html">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="./music.html">Music</a>
+    <a class="nav-link active" href="./music.html">Music</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="./twitch.html">Twitch</a>
@@ -29,9 +39,30 @@ h3 {
     <a class="nav-link" href="./other.html">Other</a>
   </li>
 </ul>
-<div style="height:30%"></div>
-<h1 class="display-1">RetryLife</h1>
-<h3><small class="text-muted">"Let's make something cool!"</small></h3>
+
+<div style="height:3%"></div>
+
+<div class="container">
+    <div class="d-flex justify-content-between">
+      <div class="p-1">
+    </div>
+      <div class="p-1">
+      <div class="embed">
+      <iframe style="border: 0; width: 350px; height: 786px;" src="https://bandcamp.com/EmbeddedPlayer/album=3953554787/size=large/bgcol=ffffff/linkcol=0687f5/transparent=true/" seamless><a href="http://retrylife.bandcamp.com/album/x-mas-02">X-MAS 02 by RetryLife</a></iframe>
+      </div>
+    </div>
+    <div class="p-1">
+    </div>
+    </div>
+</div>
+<br>
+<div class="text-center">
+  <a class="btnn" href="https://retrylife.bandcamp.com"><button type="button" class="btn btn-primary">More Music</button></a>
+    <a class="btnn" href="https://keybase.pub/ewpratten/RetryLife%20Albums"><button type="button" class="btn btn-primary">Free Downloads</button></a>
+
+
+</div>
+
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
