--- a/twitch.html
+++ b/twitch.html
@@ -12,15 +12,26 @@ h3 {
     vertical-align: middle;
     float: none;
 }
+a.btnn {
+  color:white;
+}
+.embed {
+  align:center;
+}
+.btnn {
+  align-self:center;
+}
+
 </style>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <ul class="nav justify-content-center">
   <li class="nav-item">
-    <a class="nav-link active" href="./index.html">Home</a>
+    <a class="nav-link" href="./index.html">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="./music.html">Music</a>
+    <a class="nav-link active" href="./music.html">Music</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="./twitch.html">Twitch</a>
@@ -29,9 +40,29 @@ h3 {
     <a class="nav-link" href="./other.html">Other</a>
   </li>
 </ul>
-<div style="height:30%"></div>
-<h1 class="display-1">RetryLife</h1>
-<h3><small class="text-muted">"Let's make something cool!"</small></h3>
+
+<!-- <div style="height:3%"></div> -->
+
+
+        <div id="twitch-embed"></div>
+
+    <!-- Load the Twitch embed script -->
+    <script src="https://embed.twitch.tv/embed/v1.js"></script>
+
+    <!-- Create a Twitch.Embed object that will render within the "twitch-embed" root element. -->
+    <script type="text/javascript">
+      new Twitch.Embed("twitch-embed", {
+        width: '100%',
+        height: '96%',
+        channel: "retrylife"
+      });
+    </script>
+
+
+<!-- <div class="text-center">
+
+</div> -->
+
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
