--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ h3 {
     float: none;
 }
 </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <ul class="nav justify-content-center">
