--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ h3 {
 </head>
 <body>
   <ul class="nav justify-content-center">
-  <li class="nav-item">
+<!--   <li class="nav-item">
     <a class="nav-link active" href="./index.html">Home</a>
   </li>
   <li class="nav-item">
@@ -28,7 +28,7 @@ h3 {
   </li>
   <li class="nav-item">
     <a class="nav-link" href="./other.html">Other</a>
-  </li>
+  </li> -->
 </ul>
 <div style="height:30%"></div>
 <h1 class="display-1">RetryLife</h1>
