--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ h3 {
 }
 </style>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>RetryLife</title>
 </head>
 <body>
   <ul class="nav justify-content-center">
