--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     background-color:#e5e9f0;
   }
   </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 </head>
 <body>
   <div style="height:35%"></div>
