--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p class="text-sm leading-tight text-grey-dark">Programmer and student</p>
       </div>
       <div>
-        <button class="text-xs font-semibold rounded-full px-4 py-1 leading-normal bg-white border border-purple text-purple hover:bg-purple hover:text-white">Message</button>
+        <a href="https://github.com/ewpratten"><button class="text-xs font-semibold rounded-full px-4 py-1 leading-normal bg-white border border-purple text-purple hover:bg-purple hover:text-white">GitHub</button></a>
       </div>
     </div>
   </div>
