--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   body{
     background-color:#e5e9f0;
   }
+  html {
+  scroll-behavior: smooth;
+}
   </style>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 </head>
@@ -21,20 +24,24 @@
       </div>
       <div>
         <a href="https://github.com/ewpratten"><button class="text-xs font-semibold rounded-full px-4 py-1 leading-normal bg-white border border-purple text-purple hover:bg-purple hover:text-white">GitHub</button></a>
+         <a href="#about"><button class="text-xs font-semibold rounded-full px-4 py-1 leading-normal bg-white border border-purple text-purple hover:bg-purple hover:text-white">View More</button></a>
       </div>
     </div>
   </div>
 </div>
 
+<div style="height:40%"></div>
+
 <br><br>
 
+<div id="about"></div>
   <div class="bg-white mx-auto max-w-sm shadow-lg rounded-lg overflow-hidden">
   <div class="sm:flex sm:items-center px-6 py-4">
     <div class="text-center sm:text-left sm:flex-grow">
       <div class="mb-4">
         <p class="text-xl leading-tight">About Me</p>
         <br>
-        <p class="text-sm leading-tight text-grey-dark">I am a teenager who loves to write code and make stuff. Currently, I am in school, doing stuff... Aside from that, I am a programming captain on FRC team #<a href="https://github.com/frc5024">5024</a> and spend my free time either programming or thinking about programming</p>
+        <p class="text-sm leading-tight text-grey-dark">I am a teenager who loves to write code and make stuff. Currently, I am in school, doing stuff... Aside from that, I am a programming captain on FRC team #<a href="https://github.com/frc5024" style="text-decoration:none">5024</a> and spend my free time either programming or thinking about programming</p>
       </div>
     </div>
   </div>
@@ -72,9 +79,9 @@
   </div>
 </div>
 
-<br>
+<br><br>
 <div style="text-align:center">
-  <p class="text-sm leading-tight text-grey-dark">pgp: <a href="https://keybase.io/ewpratten/pgp_keys.asc">56F5 A6FB 5A8E EF90</a></p>
+  <p class="text-sm leading-tight text-grey-dark" >PGP: <a href="https://keybase.io/ewpratten/pgp_keys.asc" style="text-decoration:none">56F5 A6FB 5A8E EF90</a></p>
 </div>
 
 
