--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
                 <!-- External Links -->
                 <div class="links">
-                    <a href="https://github.com/retrax24">GitHub</a><br>
+                    <a href="https://github.com/ewpratten">GitHub</a><br>
                     <a href="https://twitter.com/ewpratten">Twitter</a><br>
                     <!-- <a href="https://twitch.tv/retraxa">Twitch</a><br> -->
-                    <a href="https://devrant.com/users/hyperlisk">Devrant</a><br>
+                    <a href="https://devrant.com/users/ewpratten">Devrant</a><br>
                     <a href="https://github.com/frc5024">Robotics</a><br>
                 </div>
                 
