added info section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link href="/css/main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Germania+One" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Denk+One" rel="stylesheet"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 </head>
 <body>
@@ -29,6 +30,7 @@
                     <!-- <a href="https://twitch.tv/retraxa">Twitch</a><br> -->
                     <a href="https://devrant.com/users/ewpratten">Devrant</a><br>
                     <a href="https://github.com/frc5024">Robotics</a><br>
+                    <a href="#content">More</a>
                 </div>
                 
                 <!-- PGP Key -->
@@ -43,6 +45,31 @@
             <scetion class="null"><div class="blank"></div></scetion>
 
         </article>
+
+        <!-- Blank vertical space -->
+        <div class="full-height"></div>
+
+        <!-- Extra content -->
+        <table class="content">
+            <tr>
+                <td class="empty"></td>
+                <td class="info">
+                    <div class="content-box" id="content">
+                        <div class="content-box-wrapper">
+                            <!-- About Me -->
+                            <h1>--- About Me ---</h1>
+                            <p>I am a teenager who loves to write code and make stuff. I tend to spend my free time either programming or thinking about programming</p>
+
+                            <!-- Robotics -->
+                            <h1>--- Robotics ---</h1>
+                            <p>As a part of Raider Robotics (frc5024), I co-lead the programming team and help teach new programmers about programming in compiled languages, interfacing with hardware, and computer vision.</p>
+
+                            <!--  -->
+                        </div>
+                    </div>
+                </td>
+            </tr>
+        </table>
     </div>
 
     <!-- JS -->
