added ssh pub key

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 
                 <!-- PGP Key -->
                 <div class="pgp">
-                    <p><a href="https://keybase.io/ewpratten/pgp_keys.asc">56F5 A6FB 5A8E EF90</a></p>
+                    <p><a href="https://keybase.io/ewpratten/pgp_keys.asc">56F5 A6FB 5A8E EF90</a><a href="/id_rsa.pub">SSH</a></p>
                 </div>
                 
 
