--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <head>
     <title>RetryLife</title>
 
+
+    <link href="/css/animations.css" rel="stylesheet">
     <link href="/css/main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Germania+One" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Denk+One" rel="stylesheet"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 </head>
-<body>
+<body >
     <div id="particles-js">
         <article>
             <!-- About Panel -->
-            <scetion><div class="about">
+            <scetion><div class="about" id="about">
 
                 <!-- Spacer -->
                 <div class="three-height"></div>
@@ -27,7 +29,6 @@
                 <div class="links">
                     <a href="https://github.com/ewpratten">GitHub</a><br>
                     <a href="https://twitter.com/ewpratten">Twitter</a><br>
-                    <!-- <a href="https://twitch.tv/retraxa">Twitch</a><br> -->
                     <a href="https://devrant.com/users/ewpratten">Devrant</a><br>
                     <a href="https://github.com/frc5024">Robotics</a><br>
                     <a href="#content">More</a>
@@ -57,14 +58,20 @@
                     <div class="content-box" id="content">
                         <div class="content-box-wrapper">
                             <!-- About Me -->
-                            <h1>--- About Me ---</h1>
+                            <h1><dashed>---</dashed> About Me <dashed>---</dashed></h1>
                             <p>I am a teenager who loves to write code and make stuff. I tend to spend my free time either programming or thinking about programming</p>
 
                             <!-- Robotics -->
-                            <h1>--- Robotics ---</h1>
+                            <h1><dashed>---</dashed> Robotics <dashed>---</dashed></h1>
                             <p>As a part of Raider Robotics (frc5024), I co-lead the programming team and help teach new programmers about programming in compiled languages, interfacing with hardware, and computer vision.</p>
 
-                            <!--  -->
+                            <!-- Projects -->
+                            <h1><dashed>---</dashed> Projects <dashed>---</dashed></h1>
+                            <p>Every year, I work on a large number of projects. Some of the interesting ones are listed here:</p>
+
+                            <li><a onclick="transition('https://github.com/frc5024')">Robotics Projects</a></li>
+                            <li><a onclick="transition('/devmon.html')">devRant API Status</a></li>
+
                         </div>
                     </div>
                 </td>
@@ -76,4 +83,5 @@
     <script src="/js/particles.min.js"></script>
     <script src="/js/main.js"></script>
     <script src="/js/console.js"></script>
+    <script src="/js/links.js"></script>
 </body>
