added endoint link

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 
                             <li><a onclick="transition('https://github.com/frc5024')">Robotics Projects</a></li>
                             <li><a onclick="transition('/devmon.html')">devRant API Status</a></li>
+                            <li><a onclick="transition('https://api.retrylife.ca/endpoints')">RetryLife API</a></li>
 
                         </div>
                     </div>
