--- a/devmon.html
+++ b/devmon.html
@@ -55,4 +55,15 @@
     <script src="/js/links.js"></script>
     <script src="/js/devrant-monitor.js"></script>
     <script src="/js/content-rizer.js"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-74118570-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-74118570-2');
+    </script>
+
 </body>
