--- a/index.html
+++ b/index.html
@@ -85,4 +85,15 @@
     <script src="/js/main.js"></script>
     <script src="/js/console.js"></script>
     <script src="/js/links.js"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-74118570-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-74118570-2');
+    </script>
+
 </body>
