--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li><a href="https://github.com/ewpratten" class="text-gray-600">Github</a></li>
                     <li><a href="https://twitter.com/ewpratten" class="text-gray-600">Twitter</a></li>
                     <li><a href="https://devrant.com/users/ewpratten" class="text-gray-600">Devrant</a></li>    
-                    <li><a href="/blog" class="text-gray-600">Blog</a></li>                
+                    <li><a href="/blog" class="text-gray-600">DevLogs</a></li>                
             </ul>
         </div>
     </div>
