--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ title: Home
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4">
+                    <!-- <div class="col-sm-4">
                         <div class="card home-project">
                             <div class="card-body">
                                 <h5 class="card-title"><strong>Remains.xyz</strong></h5>
@@ -135,7 +135,7 @@ title: Home
                                         class="fab fa-github"></i></a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="col-sm-4">
                         <div class="card home-project">
                             <div class="card-body">
