--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@ backing_img: /assets/images/innovation__monochromatic.svg
 backing_scalar: "height:90%;"
 ---
 
-Here is a list of things I find interesting, and writeups of projects I have worked on.
+<p>Here is a list of things I find interesting, and writeups of projects I have worked on.</p>
 
 <div class="list-group" id="posts">
     <!-- <a href="#posts"
