UI cleanup and allow users to zoom on mobile

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ uses:
                     <div class="col-sm-4 project-item">
                         <div class="card home-project">
                             {% if project.hero %}
-                            <img src="{{project.hero.img_src}}" class="card-img-top" alt="" loading="auto">
+                            <img src="{{project.hero.img_src}}" class="card-img-top" alt="{{project.title}}" loading="auto">
                             {% endif %}
                             <div class="card-body">
                                 <h5 class="card-title"><strong>{{project.title}}</strong></h5>
