Update dates to work better on mobile

--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@ backing_scalar: "height:90%;"
                 </h5>
                 <p class="card-text">{{post.description}}</p>
             </div>
-            <small style="color:gray;">{{the_date.first}}</small>
+            <small style="color:gray;" class="maybe-date">{{the_date.first}}</small>
         </div>
     </a>
 
@@ -39,7 +39,7 @@ backing_scalar: "height:90%;"
     <a href="{{post.url}}" class="list-group-item list-group-item-action">
         <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">{{post.title}}</h5>
-            <small style="color:gray;">{{the_date.first}}</small>
+            <small style="color:gray;" class="maybe-date">{{the_date.first}}</small>
         </div>
         <p class="card-text">{{post.description}}</p>
     </a>
