pub modpack post, and start some more

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ uses:
             <div class="hello container">
                 <h1>Hi,</h1>
                 <h1>I am Evan&nbsp;Pratten</h1>
+                <h3 id="callsign"><a href="https://www.qrz.com/db/VA3ZZA"><em>VA3ZZA</em></a></h3>
             </div>
         </div>
 
